Liner regression, prevent over fitting by Lasso and Ridge regularization

--- a/tasks/bike_rent/OverfittingTask.ipynb
+++ b/tasks/bike_rent/OverfittingTask.ipynb
@@ -577,7 +577,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_shuffled = shuffle(df, random_state=123)\n",
@@ -1101,11 +1103,11 @@
    "source": [
     "__Блок 3. Ответьте на вопросы (каждый 0.5 балла):__\n",
     "1. В последней обученной модели выберите 4 признака с наибольшими (положительными) коэфициентами (и выпишите их), посмотрите на визуализации зависимостей cnt от этих признаков, которые мы рисовали в блоке \"Знакомство с данными\". Видна ли возрастающая линейная зависимость cnt от этих признаков по графикам? Логично ли утверждать (из здравого смысла), что чем больше значение этих признаков, тем больше людей захотят взять велосипеды? \n",
-    "    * Ответ:\n",
+    "    * Ответ: season, yr, atemp, temp. На графиках прослеживается линейная зависимость. С возрастанием значений этих параметров возрастает число прокатов велосипедов, но до определенных значений температуры (25 градусов) - после идет спад.\n",
     "1. Выберите 3 признака с наибольшими по модулю отрицательными коэффициентами (и выпишите их), посмотрите на соответствующие визуализации. Видна ли убывающая линейная зависимость? Логично ли утверждать, что чем больше величина этих признаков, тем меньше людей захотят взять велосипеды?\n",
-    "    * Ответ:\n",
+    "    * Ответ: wethersit, windspeed(mph), hum. Убывающая линейная зависимость - никто не катается на велосипедах, когда неблагоприятная погода, ветренно и влажно\n",
     "1. Выпишите признаки с коэффициентами, близкими к нулю (< 1e-3). Как вы думаете, почему модель исключила их из модели (вновь посмотрите на графики)? Верно ли, что они никак не влияют на спрос на велосипеды?\n",
-    "    * Ответ:"
+    "    * Ответ: windspeed(ms) исключен, так как дублирует windspeed(mph)"
    ]
   },
   {
