non parametric statistical hipotez check

--- a/tasks/banner_comparing/stat.two_proportions_diff_test.ipynb
+++ b/tasks/banner_comparing/stat.two_proportions_diff_test.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -33,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('banner_click_stat.txt', header = None, sep = '\\t')\n",
@@ -45,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -112,9 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -211,9 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "conf_interval_banner_a = proportion_confint(sum(data.banner_a), \n",
@@ -227,9 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -314,12 +302,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.37293045872523534\n"
+     ]
+    }
+   ],
    "source": [
+    "n1 = 34.\n",
+    "n2 = 16.\n",
+    "p1 = 10./n1\n",
+    "p2 = 4./n2\n",
+    "\n",
+    "P = (p1 * n1 + p2 * n2)/(n1 + n2) \n",
+    "\n",
+    "z = (p1 - p2) / np.sqrt(P * (1 - P) * (1. / n1 + 1. / n2))\n",
+    "\n",
     "def proportions_diff_z_test(z_stat, alternative = 'two-sided'):\n",
     "    if alternative not in ('two-sided', 'less', 'greater'):\n",
     "        raise ValueError(\"alternative not recognized\\n\"\n",
@@ -332,15 +335,16 @@
     "        return scipy.stats.norm.cdf(z_stat)\n",
     "\n",
     "    if alternative == 'greater':\n",
-    "        return 1 - scipy.stats.norm.cdf(z_stat)"
+    "        return 1 - scipy.stats.norm.cdf(z_stat)\n",
+    "    \n",
+    "    \n",
+    "print(proportions_diff_z_test(z, 'greater'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -358,9 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -377,9 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -425,9 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def proportions_diff_confint_rel(sample1, sample2, alpha = 0.05):\n",
@@ -464,9 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -484,9 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -503,9 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -536,9 +528,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
