--- a/tasks/logistic_regression_banknot_separation/regression_compare.ipynb
+++ b/tasks/logistic_regression_banknot_separation/regression_compare.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,9 @@
       "0.98\n",
       "[1 1 1 0 0 0 1 1 1 0 0 1 1 1 0 0 0 1 0 1 1 1 1 1 1 0 1 1 0 1 1 0 0 0 0 1 0\n",
       " 1 1 0 0 0 0 1 1 1 0 1 0 0]\n",
-      "0.0032969384555543435\n"
+      "0.0032969384555543435\n",
+      "(0.059945206279614305, 0.3000547937203857)\n",
+      "0.0494714680336481\n"
      ]
     }
    ],
@@ -86,7 +88,29 @@
     "\n",
     "print(flat(test_labels))\n",
     "\n",
-    "print(proportions_diff_z_test(proportions_diff_z_stat_rel(flat(test_labels[['real']]) != predict1, flat(test_labels[['real']]) != predict2)))\n"
+    "\n",
+    "def proportions_confint_diff_rel(sample1, sample2, alpha = 0.05):\n",
+    "    z = scipy.stats.norm.ppf(1 - alpha / 2.)\n",
+    "    sample = zip(sample1, sample2)\n",
+    "    n = len(sample)\n",
+    "        \n",
+    "    f = sum([1 if (x[0] == 1 and x[1] == 0) else 0 for x in sample])\n",
+    "    g = sum([1 if (x[0] == 0 and x[1] == 1) else 0 for x in sample])\n",
+    "    \n",
+    "    left_boundary = float(f - g) / n  - z * np.sqrt(float((f + g)) / n**2 - float((f - g)**2) / n**3)\n",
+    "    right_boundary = float(f - g) / n  + z * np.sqrt(float((f + g)) / n**2 - float((f - g)**2) / n**3)\n",
+    "    return (left_boundary, right_boundary)\n",
+    "\n",
+    "\n",
+    "print(proportions_diff_z_test(proportions_diff_z_stat_rel(flat(test_labels[['real']]) != predict1, flat(test_labels[['real']]) != predict2)))\n",
+    "print(proportions_confint_diff_rel(flat(test_labels[['real']]) != predict1, flat(test_labels[['real']]) != predict2))\n",
+    "\n",
+    "mu = 541.5\n",
+    "mu0 = 525\n",
+    "sigma = 100\n",
+    "n = 100\n",
+    "z = (mu - mu0) / (sigma/(n**0.5))\n",
+    "print(1 - scipy.stats.norm.cdf(z))"
    ]
   },
   {
